# Daves-Friends-Ebrima

./: .env-sample  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  lobby.py  pyproject.toml  run_checks.sh  uno.py  update_sbom.sh
controllers/: lobby.py  uno_cog.py
core/: game_state.py
models/: deck.py  game_state.py  lobby_model.py
repos/: lobby_repo.py
sbom/: sbom-docker.json  sbom.spdx  sbom.spdx.json  sbom.table.txt
services/: game_service.py  lobby_service.py
tests/: deck_test.py  fuzz.py  test_game_state_unit.py  test_lobby_repo_persistence.py
ui/: game_ui.py  lobby_ui.py
views/: base_views.py  game_views.py  lobby_views.py
