[project]
requires-python = ">=3.10"
name = "uno_discord"
version = "1.0"
dependencies = ["discord", "dotenv", "pytest"]

[project.optional-dependencies]
test = [
    "pytest",
    "atheris",
    "black",
]

[tool.setuptools]
packages = ["controllers", "models", "ui", "utils", "repos", "services", "tests", "views"]
py-modules = ["__init__"]
