[project]
requires-python = ">=3.10"
name = "uno_discord"
version = "1.0"
dependencies = ["discord", "dotenv"]

[project.optional-dependencies]
test = [
    "pytest",
    "black",
    "pylint",
]
fuzz = ["atheris"]

[tool.setuptools]
packages = ["controllers", "models", "ui", "utils", "repos", "services", "tests", "views"]
py-modules = ["__init__"]

[tool.black]
target-version = ["py313"]
